Filled out all the pages

--- a/about.html
+++ b/about.html
@@ -2,5 +2,6 @@
 layout: page
 title: About Us
 ---
-<h3>Basically elaborate more on how we were founded.</h3>
-<p>Kind of like the home page but more in detail.</p>
+<h3>Founded to help students</h3>
+<p>Quark Tutoring was founded by high school students for the sole purpose of helping those who need instruction and guidance outside of the traditional school setting.<br>
+We noticed that many students struggle with curriculum that can be either too slow or too fast for their pace of learning, and seek to correct that by offering free tutoring in the Bay Area.</p>
