--- a/contact.html
+++ b/contact.html
@@ -2,5 +2,6 @@
 layout: page
 title: Contact Us
 ---
-<h4>Have any questions?</h4>
-<p>Feel free to contact us and our team will get back to you as soon as possible.<br>Email form thing goes here.</p>
+<div style="text-align: center">
+<iframe src="https://docs.google.com/forms/d/1tG8ON-wryy7Qe64qj5furvwMcVx2Cef-DVHD2kgpd7s/viewform?embedded=true" width="760" height="1100" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+</div>
