--- a/about.html
+++ b/about.html
@@ -3,5 +3,5 @@ layout: page
 title: About Us
 ---
 <h3>Founded to help students</h3>
-<p>Quark Tutoring was founded by high school students for the sole purpose of helping those who need instruction and guidance outside of the traditional school setting.<br>
-We noticed that many students struggle with curriculum that can be either too slow or too fast for their pace of learning, and seek to correct that by offering free tutoring in the Bay Area.</p>
+<p>Quark Tutoring was founded by a group of high school students in the Bay Area. We realized that not all students have access to the academic resources they need, at school or elsewhere. We seek to help these students by offering free tutoring that is tailored to each individual's needs and circumstances.<br>
+Our tutoring service matches people with academically strong high school students who are knowledgeable in the subject matter. We aim to help every student achieve success, and we promise that Quark Tutoring will always be free.</p>
